// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BentoGrid & EmptyState — Layout Primitives Tests > renders BentoGrid with asymmetric-4 layout 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[var(--density-gap-lg,1rem)]"
>
  <div
    class="lg:col-span-2"
  >
    <div>
      Wide Cell 1
    </div>
  </div>
  <div
    class="lg:col-span-2"
  >
    <div>
      Wide Cell 2
    </div>
  </div>
  <div
    class=""
  >
    <div>
      Narrow Cell 1
    </div>
  </div>
  <div
    class=""
  >
    <div>
      Narrow Cell 2
    </div>
  </div>
</div>
`;

exports[`BentoGrid & EmptyState — Layout Primitives Tests > renders BentoGrid with hero-2col layout 1`] = `
<div
  class="grid grid-cols-1 lg:grid-cols-3 gap-[var(--density-gap-lg,1rem)]"
>
  <div
    class="lg:col-span-2"
  >
    <div>
      Hero Content
    </div>
  </div>
  <div
    class=""
  >
    <div>
      Cell 1
    </div>
  </div>
  <div
    class=""
  >
    <div>
      Cell 2
    </div>
  </div>
</div>
`;

exports[`BentoGrid & EmptyState — Layout Primitives Tests > renders EmptyState in compact and full variants 1`] = `
<div
  class="flex flex-col items-center justify-center text-center rounded-2xl border border-dashed border-border-default/60 bg-surface-card/20 py-8 px-4"
  style="opacity: 0; transform: scale(0.96);"
>
  <div
    class="bg-action-primary/10 border border-action-primary/20 flex items-center justify-center text-action-primary shadow-sm w-10 h-10 rounded-xl mb-3"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-package w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
      />
      <path
        d="M12 22V12"
      />
      <polyline
        points="3.29 7 12 12 20.71 7"
      />
      <path
        d="m7.5 4.27 9 5.15"
      />
    </svg>
  </div>
  <h3
    class="font-serif font-bold text-text-primary tracking-tight text-xs"
  >
    Aucun article
  </h3>
  <p
    class="mt-1.5 max-w-md leading-relaxed text-micro"
  >
    Le stock est vide
  </p>
</div>
`;

exports[`BentoGrid & EmptyState — Layout Primitives Tests > renders EmptyState in compact and full variants 2`] = `
<div
  class="flex flex-col items-center justify-center text-center rounded-2xl border border-dashed border-border-default/60 bg-surface-card/20 py-28 px-10 min-h-[400px]"
  style="opacity: 0; transform: scale(0.96);"
>
  <div
    class="bg-action-primary/10 border border-action-primary/20 flex items-center justify-center text-action-primary shadow-sm w-24 h-24 rounded-3xl mb-8"
  >
    <span
      class="text-4xl"
    >
      📦
    </span>
  </div>
  <h3
    class="font-serif font-bold text-text-primary tracking-tight text-lg"
  >
    Centre logistique inactif
  </h3>
  <p
    class="text-text-secondary mt-1.5 max-w-md text-base"
  >
    Aucune expédition en cours
  </p>
  <div
    class="mt-5"
  >
    <button
      type="button"
    >
      Créer un bon de commande
    </button>
  </div>
</div>
`;
